all project week 05 and week 06 tasks done version II
